corrected post styles & changed post limit per page & added missing spaces

--- a/assets/Sass/common.sass
+++ b/assets/Sass/common.sass
@@ -99,6 +99,9 @@ body
   .page-link:focus
     box-shadow: none
 
+  [v-cloak] > *
+    display: none
+
 @font-face
   font-family: 'Bosun'
   src: url("../Fonts/bosun03.otf") format("opentype")
